--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "ui": false,
     "online": true
   },
-  "vendors": [],
+  "vendors": [
+    "csv-parse/lib/index.js"
+  ],
   "dependencies": {
     "aos": "^2.3.4",
     "autoprefixer": "^9.6.1",
     "axios": "^0.19.0",
     "core-js": "^3.2.1",
+    "csv-parse": "^4.6.5",
     "globule": "^1.2.1",
     "line-clamp": "^1.0.0",
     "lozad": "^1.9.0",
