--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "globule": "^1.2.1",
     "line-clamp": "^1.0.0",
     "lozad": "^1.9.0",
+    "object-hash": "^2.0.0",
     "ramda": "^0.26.1",
     "rellax": "^1.10.0",
     "scrolldir": "^1.5.0"
