--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@babel/core": "^7.6.0",
     "@babel/preset-env": "^7.6.0",
     "@babel/register": "^7.6.0",
+    "@fullhuman/postcss-purgecss": "^1.3.0",
     "babel-loader": "^8.0.6",
     "browser-sync": "^2.26.7",
     "del": "^5.1.0",
@@ -47,14 +48,21 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
     "gulp": "^4.0.2",
+    "gulp-clean-css": "^4.2.0",
     "gulp-eslint": "^6.0.0",
     "gulp-flatten": "^0.4.0",
     "gulp-header": "^2.0.9",
     "gulp-noop": "^1.0.0",
     "gulp-plumber": "^1.2.1",
+    "gulp-postcss": "^8.0.0",
     "gulp-rename": "^1.4.0",
+    "gulp-sass": "^4.0.2",
+    "gulp-sass-glob": "^1.1.0",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-uglify": "^3.0.2",
+    "node-sass-package-importer": "^5.3.2",
+    "postcss-noop": "^1.0.1",
+    "tailwindcss": "^1.1.4",
     "vinyl-named": "^1.1.0",
     "webpack": "^4.40.2",
     "webpack-stream": "^5.2.1"
